# wireguard-auto

./: .gitignore  CMakeLists.txt  CMakeLists.txt.arm64  CMakeLists.txt.arm64.yocto  CMakeLists.txt.x86_64  LICENSE  README.md  build.sh  build_arm64.sh  build_arm64_yocto.sh  cmakelists.orig  cmakelists.qr
auth_encrypt/basic/cpp/: client.cpp  server.cpp
auth_encrypt/basic/go/client/: HOWTO.txt  client.go
auth_encrypt/basic/go/server/: HOWTO.txt  server.go
auth_encrypt/basic/python/: HOWTO.txt  client.py  server.py
auth_encrypt/basic/rust/: Cargo.toml  HOWTO.txt
auth_encrypt/basic/rust/src/: client.rs  server.rs
auth_encrypt/kernel/: Makefile  ac_server.c
auth_encrypt/kernel/client/: CMakeLists.txt  client.cpp
auth_encrypt/oop/cpp/: CMakeLists.txt  HOWTO.txt  client.cpp  server.cpp
auth_encrypt/oop/go/client/: HOWTO.txt  Makefile  client.go
auth_encrypt/oop/go/server/: HOWTO.txt  Makefile  server.go
auth_encrypt/oop/mojo/: HOWTO.txt  client.mojo  pixi.toml  server.mojo
auth_encrypt/oop/python/: client.py  server.py
auth_encrypt/oop/rust/: Cargo.toml
auth_encrypt/oop/rust/src/: client.rs  server.rs
config/: client.conf  server.conf
lib/wg-tools/: Makefile  Makefile.arm64  Makefile.arm64.yocto  genkey.c  privatekey  pubkey.c  publickey  sec_store.c  sec_store.h  subcommands.h
src/autoc/: client.cpp  common.cpp  communication.cpp  configuration.cpp  main.cpp  parser.cpp  sodium_ae.cpp  sodium_aead.cpp
src/autoc/inc/: cidr.h  client.h  client_observer.h  common.h  configuration.h  file_descriptor.h  message.h  parser.h  pipe_ret_t.h  sodium_ae.h
src/autod/: common.cpp  configuration.cpp  main.cpp  parser.cpp  peer_tbl.cpp  sendrecv.cpp  server.cpp  sodium_ae.cpp  sodium_aead.cpp  vip_pool.cpp  vtysh.cpp
src/autod/inc/: client.h  common.h  configuration.h  message.h  parser.h  peer_tbl.h  pipe_ret_t.h  server.h  server_observer.h  sodium_ae.h  sodium_aead.h  vip_pool.h  vtysh.h
src/autod/test/: base64.cpp  build.sh  secretbox.cpp
src/autod/wgac_ui/: CMakeLists.txt  dialog.ui  editconfigdialog.cpp  editconfigdialog.h  editconfigdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
